--- a/poc.html
+++ b/poc.html
@@ -11,21 +11,28 @@
 
   <label for="weekend">Weekends affichés</label>
   <label class="switch" >
-    <input type="checkbox" id="weekend" onchange="generate()">
+    <input type="checkbox" id="weekend" onchange="generate()" checked>
     <span class="slider round"></span>
   </label>
   <br/>
 
   <label for="week">Semaines affichées</label>
   <label class="switch" >
-    <input type="checkbox" id="week" onchange="generate()">
+    <input type="checkbox" id="week" onchange="generate()" checked>
     <span class="slider round"></span>
   </label>
   <br/>
 
   <label for="past">Past blacked out</label>
   <label class="switch" >
-    <input type="checkbox" id="past" onchange="generate()">
+    <input type="checkbox" id="past" onchange="generate()" checked>
+    <span class="slider round"></span>
+  </label>
+  <br/>
+
+  <label for="vertical">Vertical</label>
+  <label class="switch" >
+    <input type="checkbox" id="vertical" onchange="generate()">
     <span class="slider round"></span>
   </label>
   <br/>
