--- a/poc.html
+++ b/poc.html
@@ -51,7 +51,8 @@
   </label>
   <br/>
 
-  <button type="button" onclick="download()">SVG</button>
+  <button type="button" onclick="downloadSVG()">SVG</button>
+  <button type="button" onclick="downloadPNG()">PNG</button>
 
   <!-- 
    
