--- a/poc.html
+++ b/poc.html
@@ -53,14 +53,7 @@
 
   <button type="button" onclick="downloadSVG()">SVG</button>
   <button type="button" onclick="downloadPNG()">PNG</button>
-
-  <!-- 
-   
-  - export svg
-  - export png
-  - print multiple pdf
-
-  -->
+  <button type="button" onclick="downloadPDF()">PDF</button>
   <br/>
 
   <p id="test"></p>
