--- a/poc.html
+++ b/poc.html
@@ -53,7 +53,8 @@
 
   <button type="button" onclick="downloadSVG()">SVG</button>
   <button type="button" onclick="downloadPNG()">PNG</button>
-  <button type="button" onclick="downloadPDF()">PDF</button>
+  <button type="button" onclick="downloadPDF(false)">PDF</button>
+  <button type="button" onclick="downloadPDF(true)">PDF (print full page)</button>
   <br/>
 
   <p id="test"></p>
